--- a/src/index.sass
+++ b/src/index.sass
@@ -14,7 +14,7 @@ html, body
   color: black
   background: white
   text-align: center
-  font-size: 18px
+  font-size: 16px
   font-family: "Helvetica Neue", sans-serif
   -webkit-text-size-adjust: none
   -moz-osx-font-smoothing: grayscale
@@ -36,3 +36,7 @@ li, img, canvas
 a, a:hover, a:active, a:visited
   text-decoration: none
   color: inherit
+
+button
+  display: block
+  cursor: pointer
